[package]
name = "ai-term"
version = "0.2.0"
edition = "2021"
description = "An AI-enhanced CLI wrapper for macOS/Linux with configuration support"

[dependencies]
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
libz-sys = { version = "1.1.29", features = ["static"] }
